# Herschels

./: PointToDialog.cpp  README.md  README1.md  StelMovementMgr.cpp  StelMovementMgr.hpp  default_ocular.ini  default_sweep.ini  formatSweepFile.py  herschel_data.db  herschels_test.ssc  install_plugin.txt  sweep.ssc  sweep_data.csv  sweep_data.txt  sweep_data.xls
Herschels/: CMakeLists.txt  README.md
Herschels/builds/macosx/: .bash_profile.save  CMakeCache.txt
Herschels/builds/macosx/src/: moc_Herschels.cpp_parameters  moc_Sweep.cpp_parameters  moc_SweepTools.cpp_parameters
Herschels/builds/macosx/src/gui/: moc_HerschelsDialog.cpp_parameters  moc_PropertyBasedTableModel_Point.cpp_parameters
Herschels/resources/: Herschels.qrc  default_sweep.ini  formatSweepFile.py  sweep_data.csv
Herschels/src/: CMakeLists.txt  Herschels.cpp  Herschels.hpp  Sweep.cpp  Sweep.hpp  SweepTools.cpp  SweepTools.hpp
Herschels/src/gui/: CalendarDialog.cpp  CalendarDialog.hpp  HerschelsDialog.cpp  HerschelsDialog.hpp  PropertyBasedTableModel_Point.cpp  PropertyBasedTableModel_Point.hpp  StopDialog.cpp  StopDialog.hpp  SweepEffectsDialog.cpp  SweepEffectsDialog.hpp  calendarDialog.ui  herschelsDialog.ui  herschelsDialog_default.ui  stopDialog.ui  sweepEffectsDialog.ui
Oculars/src/: Oculars.cpp
PointTo/: CMakeLists.txt
PointTo/resources/: default_sweep.ini
PointTo/src/: CMakeLists.txt  PointTo.cpp  PointTo.hpp  Sweep.cpp  Sweep.hpp  SweepTools.cpp  SweepTools.hpp
PointTo/src/gui/: PointToDialog.cpp  PointToDialog.hpp  pointTo.ui  pointToDialog.ui
PointTo2/: CMakeLists.txt  README.md
PointTo2/builds/unix/: CMakeCache.txt
PointTo2/builds/unix/src/: moc_PointTo.cpp_parameters  moc_Sweep.cpp_parameters  moc_SweepTools.cpp_parameters
PointTo2/builds/unix/src/gui/: moc_PointToDialog.cpp_parameters  moc_PropertyBasedTableModel.cpp_parameters
PointTo2/resources/: PointTo2.qrc  default_sweep.ini
PointTo2/src/: CMakeLists.txt  PointTo2.cpp  PointTo2.cpp.autosave  PointTo2.hpp  Sweep.cpp  SweepTools.cpp  SweepTools.hpp  runSweep_draft.cpp
PointTo2/src/gui/: PointTo2Dialog.cpp  PointTo2Dialog.hpp  README.md  pointTo2Dialog.ui
